feat: can authenticate an application exchanging clientId & clientSecret for access token
