# src/controllers/authenticate/index.ts
@@ -1,0 +1,3 @@
+import Authenticate from './Authenticate';
+
+export default { Authenticate };
