# src/routers/index.ts
@@ -1,7 +1,9 @@
 import accounts from './Accounts';
 import users from './Users';
+import authenticate from './Authenticate';
 
 export default {
   accounts,
   users,
+  authenticate,
 };
